apps/GB-APP/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: backend
        image: tblackedg/guestbook-backend:main
        ports:
        - containerPort: 3000
