apps/GB-APP/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend
  namespace: sample-guestbook
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  externalTrafficPolicy: Local
  selector:
    app: guestbook
  ports:
    - port: 80          # Service port (HTTP)
      targetPort: 3000  # Container port where backend listens
      protocol: TCP
  type: LoadBalancer      # Expose the service externally only when on VPN
